k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizdeck
spec:
  selector:
    app: quizdeck
  ports:
    - port: 80
      targetPort: 80
